tech-service/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tech-service
  template:
    metadata:
      labels:
        app: tech-service
    spec:
      containers:
        - name: tech-service
          image: tech-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /tech-service/actuator/health
              port: 8080
              host: demo.localhost
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /tech-service/actuator/health
              port: 8080
              host: demo.localhost
            initialDelaySeconds: 30
            periodSeconds: 10
