tech-service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-service
spec:
  selector:
    app: tech-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
