tech-service/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.localhost
      http:
        paths:
          - path: /tech-service
            pathType: Prefix
            backend:
              service:
                name: tech-service
                port:
                  number: 8080
